--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "archiver": "^7.0.1",
     "express": "^4.19.2",
     "fluent-ffmpeg": "^2.1.3",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "serverless-http": "^3.2.0"
   }
 }
