--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@netlify/functions": "^2.8.0",
     "archiver": "^7.0.1",
     "express": "^4.19.2",
